# heatin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README  README.md  SensorsController.cpp  SensorsController.h  SensorsTask.cpp
src/: CPU.c  CPU.cpp  CPU.h  CPU.hpp  Chip.cpp  Chip.hpp  Exceptions.hpp  Frequency.cpp  Frequency.hpp  MainWindow.cpp  MainWindow.hpp  Measurement.cpp  Measurement.hpp  PCI.cpp  PCI.hpp  SensorsController.cpp  SensorsController.hpp  SensorsUtil.cpp  SensorsUtil.hpp  StringUtil.hpp  Subfeature.cpp  Subfeature.hpp  SysfsFile.cpp  SysfsFile.hpp  Updateable.hpp  main.cpp
